[tool.poetry]
name = "nafc"
version = "0.1.0"
description = ""
authors = ["kimdoanh89 <kimdoanh89@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
nornir = "^3.0.0"
nornir_utils = "^0.1.0"
nornir_netmiko = "^0.1.1"
nornir_scrapli = "^2020.9.23"
click = "^7.1.2"
scrapli-ssh2 = "^2020.6.6"
scrapli = {extras = ["genie"], version = "^2020.9.26"}
nornir_napalm = "^0.1.1"
rich = "^7.1.0"
pyats = {extras = ["full"], version = "^20.9"}
packaging = "^20.4"

[tool.poetry.dev-dependencies]
bpython = "^0.19"
pdbpp = "^0.10.2"
flake8 = "^3.8.3"
mypy = "^0.782"
black = "^20.8b1"
bandit = "^1.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
